--- a/docs/style/skill.css
+++ b/docs/style/skill.css
@@ -153,8 +153,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 8px 0;
-    margin-bottom: 5px;
+    padding: 2px 0;
+    margin-bottom: 2px;
     border-radius: 8px;
     transition: all 0.3s ease;
 }
